--- a/material/.overrides/home.html
+++ b/material/.overrides/home.html
@@ -18,25 +18,33 @@
             <h1>모라이 기술문서에 오신 것을 환영합니다!</h1>
             {% endif %}
           <!-- <img src="assets/morai-logo3.png" alt="" width="1659" height="1200" draggable="false"> -->
-          <img src="https://static.wixstatic.com/media/abc373_06a150736ed44b40b0d27d00297a3f6df000.jpg/v1/fill/w_1920,h_604,al_c,q_85,usm_0.33_1.00_0.00,enc_auto/abc373_06a150736ed44b40b0d27d00297a3f6df000.jpg" alt="" width="auto" height="auto" draggable="false">
-          <h2>Checkout MORAI SIM 1.0 Products.</h2>
+          <img src="https://static.wixstatic.com/media/abc373_06a150736ed44b40b0d27d00297a3f6df000.jpg/v1/fill/w_1920,h_604,al_c,q_85,usm_0.33_1.00_0.00,enc_auto/abc373_06a150736ed44b40b0d27d00297a3f6df000.jpg" alt="" width="1659" height="auto" draggable="false">
+          <p></p>  
+          {% if config.theme.language == 'en' %}
+            <h2>Checkout MORAI SIM 1.0 Products</h2>
+            {% elif config.theme.language == 'ko' %}
+            <h2>SIM 1.0 제품 확인하기</h2>
+            {% endif %}
           <ul>
             <li>
-          <a href="./simdrive/intro/morai-simair/" title="About MORAI SIM: Drive" class="md-button md-button--primary">
-            SIM: Drive
-          </a>
-          <a href="./simdrive/getting-started/" title="Quick Start for all SIM Products!" class="md-button">
-            Getting Started
-          </a>
-          <a href="./simdrive/user-guide/" title="How to Use MORAI SIM: Drive" class="md-button">
-            User Guide
-          </a>
-          </li>
-          <li>
-          <a href="./simair/intro/morai-simair/" title="About MORAI SIM:Air" class="md-button md-button--primary">
-            SIM: Air  
-          </a>
-          </li>
+              <a href="./getting-started/" title="Quick Start for all SIM 1.0 Products!" class="md-button">
+                Getting Started  
+              </a>
+            </li>
+            <li>
+            <a href="./simdrive/intro/morai-simair/" title="About MORAI SIM: Drive" class="md-button md-button--primary">
+              SIM: Drive
+            </a>
+            <a href="./simdrive/user-guide/" title="How to Use MORAI SIM: Drive" class="md-button">
+              User Guide
+            </a>
+            </li>
+            <li>
+            <a href="./simair/intro/morai-simair/" title="About MORAI SIM:Air" class="md-button md-button--primary">
+              SIM: Air  
+            </a>
+            </li>
+          </ul>  
           <img src="assets/images/illustration.png" alt="" width="1659" height="1200" draggable="false">
         </div>
         </div>
