Update ko docs to drive intro
Signed-off-by: ejkim <ejkim@morai.ai>

--- a/material/.overrides/home.html
+++ b/material/.overrides/home.html
@@ -28,7 +28,7 @@
             {% endif %}
           <ul>
             <li>
-              <a href="./getting-started/" title="Quick Start for all SIM 1.0 Products!" class="md-button">
+              <a href="./user-guide/getting-started/" title="Quick Start of SIM 1.0 Products!" class="md-button">
                 Getting Started  
               </a>
             </li>
@@ -38,7 +38,7 @@
             </a>
             </li>
             <li>
-            <a href="./developer-guide/" title="MORAI SIM Advanced Guide" class="md-button md-button--primary">
+            <a href="./developer-guide/" title="MORAI SIM Advanced User Guide" class="md-button md-button--primary">
               Developer Guide 
             </a>
             </li>
