--- a/material/.overrides/home.html
+++ b/material/.overrides/home.html
@@ -15,7 +15,7 @@
             {% if config.theme.language == 'en' %}
             <h1>Welcome to MORAI Technical Documentation!</h1>
             {% elif config.theme.language == 'ko' %}
-            <h1>모라이 기술문서에 오신 것을 환영합니다!</h1>
+            <h1>모라이 공식 기술 문서 사이트에 오신 것을 환영합니다!</h1>
             {% endif %}
           <!-- <img src="assets/morai-logo3.png" alt="" width="1659" height="1200" draggable="false"> -->
           <!-- <img src="https://static.wixstatic.com/media/abc373_06a150736ed44b40b0d27d00297a3f6df000.jpg/v1/fill/w_1920,h_604,al_c,q_85,usm_0.33_1.00_0.00,enc_auto/abc373_06a150736ed44b40b0d27d00297a3f6df000.jpg" alt="" width="1659px" height="auto" draggable="false"> -->
