--- a/material/.overrides/home.html
+++ b/material/.overrides/home.html
@@ -15,16 +15,16 @@
             {% if config.theme.language == 'en' %}
             <h1>Welcome to MORAI Technical Documentation!</h1>
             {% elif config.theme.language == 'ko' %}
-            <h1>모라이 공식 기술 문서 사이트에 오신 것을 환영합니다!</h1>
+            <h1>모라이 기술 문서 사이트에 오신 것을 환영합니다!</h1>
             {% endif %}
           <!-- <img src="assets/morai-logo3.png" alt="" width="1659" height="1200" draggable="false"> -->
           <!-- <img src="https://static.wixstatic.com/media/abc373_06a150736ed44b40b0d27d00297a3f6df000.jpg/v1/fill/w_1920,h_604,al_c,q_85,usm_0.33_1.00_0.00,enc_auto/abc373_06a150736ed44b40b0d27d00297a3f6df000.jpg" alt="" width="1659px" height="auto" draggable="false"> -->
           <img src="https://static.wixstatic.com/media/7d1679_9795b2130e2b4fdaa94665936c1338ba~mv2.jpg/v1/crop/x_0,y_47,w_1920,h_891/fill/w_981,h_455,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/11.jpg" alt="" width="1659px" height="auto" draggable="false">
           <p></p>  
-          {% if config.theme.language == 'en' %}
-            <h2>Checkout MORAI SIM 1.0 Products</h2>
+            {% if config.theme.language == 'en' %}
+            <h2>Check out the official guide document for MORAI SIM 1.0.</h2>
             {% elif config.theme.language == 'ko' %}
-            <h2>SIM 1.0 제품 확인하기</h2>
+            <h2> MORAI SIM 1.0에 대한 공식 가이드 문서를 확인하십시오.</h2>
             {% endif %}
           <ul>
             <li>
@@ -38,9 +38,14 @@
             </a>
             </li>
             <li>
-            <a href="./developer-guide/" title="MORAI SIM Advanced User Guide" class="md-button md-button--primary">
+            <a href="./developer-guide/" title="MORAI SIM Advanced User Guide" class="md-button">
               Developer Guide 
             </a>
+            </li>
+            <li>            
+            <a href="./api-guide/" title="MORAI SIM API Usage and References" class="md-button md-button--primary">
+              API Guide 
+            </a>            
             </li>
           </ul>  
           <img src="assets/images/illustration.png" alt="" width="1659" height="1200" draggable="false">
