Update ko contents for 0.0 0.1 version
Signed-off-by: ejkim <ejkim@morai.ai>

--- a/material/.overrides/main.html
+++ b/material/.overrides/main.html
@@ -5,8 +5,7 @@
 
 {% block outdated %}
 <span style="color:#4051b5;"> You're not viewing the stable version.
-  <a href="{{ '../' ~ base_url }}"> 
-    <strong>Click here to go to latest.</strong>
+  <a href="{{ '../' ~ base_url }}">  Click here to go to Stable.
   </a></span>
 {% endblock %}
 
